Repositorys, Iservices, services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=grupo3
 
-spring.datasource.url=jdbc:mysql://localhost:3306/bd-oo2spring?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root123456789
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
