--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=grupo3
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${USERNAME}
-spring.datasource.password=${PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/bd-oo2spring?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.properties.dialect=org.hibernate.dialect.MySQL8Dialect
+
+//spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.hibernate.ddl-auto=create
